better partials, builds to dev and prod simultaneously

--- a/.tmp/index.html
+++ b/.tmp/index.html
@@ -3,19 +3,237 @@
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width initial-scale=1">
-	<title>Feb 2017 Intouch</title>
+	<title>February 2017 Intouch</title>
 	<link href="styles/unionGas.css" rel="stylesheet">
 	<link href="styles/main.min.css" rel="stylesheet">
 </head>
-<!-- IMAGES-->
-<div style="max-width: 778px; margin: 0 auto">
-	<div class="bill-insert">
-		<div class="intouch">
-			<div class="row text-center" style="margin:30px 0">
-				<img class="hero" src="hdr.jpg" alt="A girl catching snowflakes, snow on evergreens">
+<div class="row content collapse" id="content_section" role="main">
+	<div class="medium-3 large-3 columns hide-for-small-only hide-on-print" style="padding-right:1rem">
+		<!-- googleoff: all-->
+		<h1 class="visually-hidden" id="leftnav-heading">Section Menu</h1>
+		<nav class="leftnav show-for-large-up hide-for-print" id="left-nav" role="navigation">
+			<!-- accessible sidebar sublayout-->
+			<ul>
+				<li class="visually-hidden">Residential</li>
+				<li>
+					<h1>
+						<a href="/residential/manage-your-account">Manage Your Account</a>
+					</h1>
+					<ul>
+						<li>
+							<h2>
+								<a href="https://myaccount.uniongas.com/login.aspx" target="_blank">Log in to MyAccount</a>
+							</h2>
+						</li>
+						<li>
+							<h2>
+								<a href="/residential/manage-your-account/what-is-myaccount">What is MyAccount</a>
+							</h2>
+						</li>
+						<li>
+							<h2>
+								<a href="/residential/manage-your-account/pay-your-bill">Pay Your Bill</a>
+							</h2>
+						</li>
+						<li>
+							<h2>
+								<a href="/residential/manage-your-account/billing">Billing</a>
+							</h2>
+							<ul>
+								<li>
+									<h3>
+										<a href="/residential/manage-your-account/billing/view-your-bills">View Your Bills</a>
+									</h3>
+								</li>
+								<li>
+									<h3>
+										<a href="/residential/manage-your-account/billing/view-current-balance">View Your Current Balance</a>
+									</h3>
+								</li>
+								<li>
+									<h3>
+										<a href="/residential/manage-your-account/billing/compare-bills">Compare Your Bills</a>
+									</h3>
+								</li>
+								<li>
+									<h3>
+										<a href="/residential/manage-your-account/billing/equal-billing-plan">Equal Billing Plan</a>
+									</h3>
+								</li>
+								<li>
+									<h3>
+										<a href="/residential/manage-your-account/billing/submit-meter-reading">Submit a Meter Reading</a>
+									</h3>
+								</li>
+								<li>
+									<h3>
+										<a href="/residential/manage-your-account/billing/understanding-your-bill">Understanding Your Bill</a>
+									</h3>
+								</li>
+								<li>
+									<h3>
+										<a href="/residential/manage-your-account/billing/ways-to-manage-bill">Ways to manage your Bill</a>
+									</h3>
+								</li>
+								<li>
+									<h3>
+										<a href="/residential/manage-your-account/billing/security-deposit">Security Deposit</a>
+									</h3>
+								</li>
+								<li>
+									<h3>
+										<a class="selected" href="/residential/manage-your-account/billing/bill-inserts" aria-label="this is the current document">Bill Inserts</a>
+									</h3>
+									<ul>
+										<li>
+											<h4>
+												<a href="/residential/manage-your-account/billing/bill-inserts/2017">2017</a>
+											</h4>
+										</li>
+										<li>
+											<h4>
+												<a href="/residential/manage-your-account/billing/bill-inserts/2016">2016</a>
+											</h4>
+										</li>
+										<li>
+											<h4>
+												<a href="/residential/manage-your-account/billing/bill-inserts/2015">2015</a>
+											</h4>
+										</li>
+									</ul>
+								</li>
+								<li>
+									<h3>
+										<a href="/residential/manage-your-account/billing/bill-payments-faq">FAQs</a>
+									</h3>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<h2>
+								<a href="/residential/manage-your-account/update-account-information">Update Your Account Information</a>
+							</h2>
+						</li>
+						<li>
+							<h2>
+								<a href="/residential/manage-your-account/paperless-billing">Paperless Billing</a>
+							</h2>
+						</li>
+					</ul>
+				</li>
+				<li>
+					<h1>
+						<a href="/residential/start-stop-move-service">Start, Stop or Move</a>
+					</h1>
+				</li>
+				<li>
+					<h1>
+						<a href="/residential/save-money-energy">Save Money & Energy</a>
+					</h1>
+				</li>
+				<li>
+					<h1>
+						<a href="/residential/products-services">Products & Services</a>
+					</h1>
+				</li>
+				<li>
+					<h1>
+						<a href="/residential/rates">Rates</a>
+					</h1>
+				</li>
+				<li>
+					<h1>
+						<a href="/residential/customer-service">Customer Service</a>
+					</h1>
+				</li>
+			</ul>
+		</nav>
+		<!-- googleon: all-->
+	</div>
+	<div class="medium-9 columns end" id="main-content">
+		<div style="max-width: 778px; margin: 0 auto">
+			<div class="bill-insert">
+				<div class="intouch">
+					<div class="row text-center" style="margin:30px 0">
+						<img class="hero" src="images/hdr.jpg" alt="A girl catching snowflakes, snow on evergreens" />
+					</div>
+					<h1 class="pageTitle">Top 3 questions about cap and trade</h1>
+					<div class="row">
+						<img class="margin--right margin--bottom left small-full" src="images/review.jpg" alt="People reviewing their natural gas bill." />
+						<p>
+							<strong>1. What is cap and trade?</strong>
+							<br>The provincial government’s cap-and-trade program, which started on Jan. 1, 2017, sets a target to reduce the amount of greenhouse gas (GHG) emissions in Ontario. Union Gas is required to buy emission allowances for the natural gas you use, and
+							those costs are recovered on your bill. The government plans to use the funds raised by this program to support Ontario’s Climate Change Action Plan. Visit
+							<a href="uniongas.com/capandtrade">uniongas.com/capandtrade</a> to learn more.</p>
+						<p>
+							<strong>2. How much will cap and trade increase my bill?</strong>
+							<br>The current cost of GHG emission allowances – about 3.3 cents per cubic metre (m<sup>3</sup>) of natural gas used – is included in the Delivery line on your bill. The price of emission allowances can change over time, but the Ontario Energy Board
+							must approve all costs before they’re charged to you. By using the calculator found at
+							<a href="uniongas.com/capandtrade">uniongas.com/capandtrade</a>, you can estimate what cap and trade is costing you.</p>
+						<p>
+							<strong>3. What can I do to reduce the cost?</strong>
+							<br>The amount you’ll pay for cap and trade depends on the amount of gas you use. Union Gas has effi ciency programs and simple tips to help you reduce your gas use and lower your overall energy costs along with the costs of cap and trade. Go to
+							<a
+									href="uniongas.com/savemoney" target="_blank">uniongas.com/savemoney</a> to check them out.</p>
+					</div>
+					<div class="row">
+						<div class="callout">
+							<h2>You Pay, So Have Your Say</h2>
+							<p>We’d like you to participate in a questionnaire about how we’re meeting your utility needs. Visit
+								<A href="uniongasplans.ca">uniongasplans.ca</a> to take the questionnaire.</p>
+						</div>
+					</div>
+					<hr>
+					<h2 class="small-text-center medium-text-left">MyAccount helps at tax time</h2>
+					<div class="row">
+						<img class="left margin--right margin--bottom columns small-8 small-offset-2 medium-12 medium-offset-0" src="images/laptop.jpg" alt="Laptop with image of MyAccount details." />
+					</div>
+					<div class="columns small-12">
+						<p>MyAccount, your Union Gas online account manager, is designed to make life easier – especially at tax time. Simply log in to MyAccount for a summary of your annual natural gas bills and payments.</p>
+						<ul class="margin--bottom">
+							<li>
+								<strong>Get an annual summary of your gas use and bill history, with cap-and-trade costs shown separately</strong>
+							</li>
+							<li>
+								<strong>Print or download up to 24 months of account history</strong>
+							</li>
+							<li>
+								<strong>No need to save and file (or lose) your bills when they’re at your fingertips 24/7</strong>
+							</li>
+							<li>
+								<strong>Mobile and desktop versions let you access your Union Gas account any time, anywhere</strong>
+							</li>
+							<li>
+								<strong>MyAccount is secure, protected, organized and, best of all, FREE</strong>
+							</li>
+						</ul>
+					</div>
+					<div class="row">
+						<div class="callout">
+							<h3>To get your billing history:</h3>
+							<ol>
+								<li>Log in to MyAccount at
+									<a href="uniongas.com/myaccount" target="_blank">uniongas.com/myaccount</a>
+								</li>
+								<li>Click on the Bills & Payments tab</li>
+							</ol>
+							<h3>If you’ve never used MyAccount:</h3>
+							<ol>
+								<li>Go to
+									<a href="uniongas.com/myaccount" target="_blank">uniongas.com/myaccount</a> and click Register Now</li>
+								<li> Complete the registration page – you’ll need your 14-digit Union Gas account number</li>
+							</ol>
+						</div>
+					</div>
+					<div class="row">
+						<p>Choose to get your gas bill as a PDF attached to your monthly email notification for even more convenience – no login or password required. Find out more about MyAccount at
+							<A href="uniongas.com/residential">uniongas.com/residential</a>.</p>
+					</div>
+				</div>
 			</div>
-			<h1 class="pageTitle" style="margin:30px 0">New cap-and-trade costs are included on this bill.</h1>
-			<div class="row">Text!</div>
 		</div>
+	</div>
+	<div class="row">
+		<copyright>2017 Union gas</copyright>
 	</div>
 </div>
