--- a/.tmp/index.html
+++ b/.tmp/index.html
@@ -7,11 +7,11 @@
 	<link href="styles/unionGas.css" rel="stylesheet">
 	<link href="styles/main.min.css" rel="stylesheet">
 </head>
-<div class="row content collapse" id="content_section" role="main">
+<div class="row content collapse" id="content_section" role="main" style="padding:0 15px">
 	<div class="medium-3 large-3 columns hide-for-small-only hide-on-print" style="padding-right:1rem">
 		<!-- googleoff: all-->
 		<h1 class="visually-hidden" id="leftnav-heading">Section Menu</h1>
-		<nav class="leftnav show-for-large-up hide-for-print" id="left-nav" role="navigation">
+		<nav class="leftnav show-for-large-up hide-for-print" id="left-nav" role="navigation" style="padding-right:1rem">
 			<!-- accessible sidebar sublayout-->
 			<ul>
 				<li class="visually-hidden">Residential</li>
